--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+  "name": "mano",
+  "description": "Your helping hand in management",
+  "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -23,6 +27,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "supabase": "^2.24.3",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
