--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-config-next": "15.3.1",
     "postcss": "^8",
     "prettier": "^3.5.3",
+    "puppeteer": "^24.10.2",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
